Fixed spacing issue

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7690,8 +7690,6 @@ p.small {
     .section {
       padding-top: 60px;
       padding-bottom: 60px; } }
-  .section:nth-child(even) {
-    background-color: #f5f5f4; }
 
 .full-width {
   width: 100vw;
@@ -8408,6 +8406,10 @@ label {
 .esriPopup .container {
   padding-left: 0;
   padding-right: 0; }
+
+.page-content .reset {
+  padding-top: 0;
+  padding-bottom: 0; }
 
 @media (min-width: 992px) {
   .page-content .htmlmodule {
@@ -10381,12 +10383,10 @@ select.navigator {
     background-color: #fff; }
 
 #tripToolsTabs .tab-content {
-  padding-top: 30px;
-  padding-bottom: 30px; }
+  padding-top: 30px; }
   @media (min-width: 992px) {
     #tripToolsTabs .tab-content {
-      padding-top: 60px;
-      padding-bottom: 60px; } }
+      padding-top: 60px; } }
 
 #tripPlannerModule .dropdown-menu {
   background-color: #dbf4fd; }
