--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -140,9 +140,9 @@ p.small {
     padding-bottom: 60px;
   }
 
-  &:nth-child(even) {
-    background-color: $gray-100;
-  }
+  //   &:nth-child(even) {
+  //     background-color: $gray-100;
+  //   }
 }
 
 .full-width {
